styles/manager.scss
h1 {
  text-align: center;
}

#mode-switch {
  height: 80px;
  width: 120px;
  font-size: 18px;
  padding: 10px;
  background-color: #ccc; // default background color
  &.dark-mode {
  background-color: #444; // background color in dark mode
  }
}

body {
  background-color: #f5f5f5;
  color: #333;

  &.dark-mode {
  background-color: #333;
  color: #f5f5f5;
  }
}

table {
  width: 100%;
  border-collapse: collapse;

  th, td {
    border: 1px solid #ddd;
    padding: 8px;
    text-align: left;
  }

  th {
    background-color: #ddd;
  }
}

form {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin-top: 20px;

  input[type="text"] {
    width: 20%;
    height: 20px;
    padding: 10px;
    margin-bottom: 20px;
    border-radius: 5px;
    border: 1px solid #ddd;
    font-size: 16px;

    &::placeholder {
      font-style: italic;
      color: #ddd;
    }
  }

  button[type="submit"] {
    width: 120px;
    height: 40px;
    background-color: #2196f3;
    color: white;
    border: none;
    border-radius: 5px;
    cursor: pointer;
    font-size: 16px;
    font-weight: bold;
    margin: 10px;
  }
}

#checkboxes-popup {
  display: none;
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: rgba(0, 0, 0, 0.5);
  z-index: 1;
}
#checkboxes-popup-content {
  background-color: white;
  border: 1px solid #888;
  width: 300px;
  height: 200px;
  margin: 15% auto;
  padding: 20px;
  position: relative;
}
#checkboxes-popup-close {
  position: absolute;
  top: 10px;
  right: 10px;
}

.first-row {
  color: black;
}

